# onoki

./: .gitignore  LIMITATIONS.md  README.md  dune-project  impl_quickstart.md  jvm-specs-guide.md  make architect functional ocaml like language for.md  ocaml_jvm_arch.md  onoki.opam  plan.md  run_tests.sh
.agent/rules/: ocaml.md
src/: ast.ml  classfile.ml  dune  jvmgen.ml  jvminstr.ml  lambda.ml  lexer.mll  parser.mly  typing.ml
stdlib/: prelude.onoki
tests/: closure_test.onoki  fact2.onoki  factorial.onoki  if_test.onoki  include_test.onoki  java_interop.onoki  list_test.onoki  modules.onoki  polymorphism.onoki  records.onoki  records_parse.onoki  simple.onoki  string_test.onoki  tuple_match.onoki  tuple_test.onoki  type_inference.onoki  variants_match.onoki  variants_parse.onoki
